# ipum_mlops_intro

./: .env.dev  .env.prod  .env.test  .gitignore  .pre-commit-config.yaml  .sops.yaml  Dockerfile  HOMEWORK.md  LAB_INSTRUCTION.md  LICENSE  README.md  README_LAB_INFO.md  app.py  docker-compose.yaml  inference.py  main.py  main.py~  public_key.asc  pyproject.toml  pytest.ini  secrets.yaml  settings.py  training.py
api/models/: iris.py
homework_lab1/: main.py  pyproject.toml
ml/: iris.mdl
test/: test_app.py  test_main.py  test_settings.py
