[project]
name = "ipum-mlops-intro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pre-commit>=4.2.0",
    "pydantic-settings>=2.9.0",
    "sops>=1.18",
    "ruamel.yaml<0.18",
    "pyyaml>=6.0.2",
    "pytest>=8.3.5",
    "pytest-dotenv>=0.5.2",
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
    "httpx>=0.28.1",
    "scikit-learn>=1.6.1",
]
